# SRTManager

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ManualReleaseMain.yml
include/: Common.h  Helpers.h  Main.h  UI.h
src/: Helpers.cpp  Main.cpp  UI.cpp
tests/: test_Strings.cpp
